- Add logging for PDL artifact sending in PdlOpprettArtifactCommandPdl - Update VergemaalMappingStrategy to correctly map tjenesteoppgave to individual entries - Modify VergemaalMappingStrategyTest to reflect changes in mapping logic and assertions #deploy-test-pdl-forvalter